--- a/index.html
+++ b/index.html
@@ -13,57 +13,298 @@
 </head>
 
 <body>
-  <div class="bg-grey top-header">
-    <div class="container text-white pb-2">
-      <div class="row align-items-center">
-        <div class="col">
-          <div class="pt-2">
-            See how we’re handling our COVID-19 Response.
+  <header>
+    <div class="bg-light-grey top-header">
+      <div class="container text-white pb-2">
+        <div class="row align-items-center">
+          <div class="col">
+            <div class="pt-2 d-flex justify-content-center justify-content-lg-start">
+              See how we’re handling our COVID-19 Response.
+            </div>
+          </div>
+          <div class="col-lg-4 text-right">
+            <a href="tel:8006614335" class="d-flex align-items-center text-white pt-2 justify-content-center justify-content-lg-end"><img class="phone icon-img" src="Images\tel-icon-top.png" alt=""><span
+                class="d-none d-lg-flex">Phone&nbsp;</span>(800)
+              661-4335</a>
           </div>
         </div>
-        <div class="col-lg-4 text-right">
-          <a href="tel:8006614335" class="d-flex align-items-center text-white pt-2"><img class="phone icon-img" src="Images\tel-icon-top.png" alt="">Phone (800) 661-4335</a>
+      </div>
+    </div>
+
+    <nav class="navbar navbar-expand-lg navbar-light">
+      <div class="container">
+        <a class="navbar-brand" href="#"><img src="Images\logo.png" alt="" class="img-rounded center-block"></a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item active">
+              <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Service</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Equipment</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Consumables</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Contact</a>
+            </li>
+            <li class="nav-item dropdown search">
+              <a class="" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <img class="icon-img img-rounded center-block" src="Images\search-icon.png" alt="">
+              </a>
+              <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton">
+                <div class="input-group">
+                  <div class="input-group-prepend">
+                    <span class="input-group-text" id="basic-addon1"><img class="icon-img img-rounded center-block" src="Images\search-icon.png" alt=""></span>
+                  </div>
+                  <input type="text" class="form-control" placeholder="" aria-label="Search" aria-describedby="basic-addon1">
+                </div>
+                <a class="dropdown-item" href="#">Action</a>
+                <a class="dropdown-item" href="#">Another action</a>
+                <a class="dropdown-item" href="#">Something else here</a>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+  </header>
+  <div class="position-relative">
+    <img class="d-none d-lg-block w-100" src="Images\Home\main-header-nowhite.jpg" alt="">
+    <img class="d-lg-none d-block w-100" src="Images\Home\main-header-nowhite_mobile.jpg" alt="">
+    <div class="position-absolute white-overlay"></div>
+    <div class="position-absolute overlay-text text-blue">
+      <div class="container">
+        <h1><span class="small">Trusted Laboratory Products and Services</span>
+          <br>FOR OVER <span class="yellow-border">30 YEARS!</span></h1>
+      </div>
+    </div>
+    <a class="overlay-arrow position-absolute" href="#">
+      <img class="d-none d-lg-block" src="Images\arrow-button.png" alt="">
+      <img class="d-block d-lg-none" src="Images\arrow-button-mobile.png" alt="">
+    </a>
+  </div>
+
+  <div class="container">
+    <div class="py-5 mt-3">
+      <h2 class="text-center text-blue"><span class="yellow-border-h2">NEW</span> PRODUCTS</h2>
+      <div class="row">
+        <div class="col-lg-4 pt-5 text-center mt-3">
+          <div class="position-relative w-75 mx-auto">
+            <img class="w-100" src="Images\Home\prod1.jpg" alt="">
+            <div class="new">
+              NEW
+            </div>
+          </div>
+          <h6 class="pt-3">Heratherm™ General Protocol
+            Microbiological Incubator</h6>
+          <a class="btn btn-primary btn-sm" href="#" role="button">MORE INFO</a>
+        </div>
+        <div class="col-lg-4 pt-5 text-center mt-3">
+          <div class="position-relative w-75 mx-auto">
+            <img class="w-100" src="Images\Home\prod1.jpg" alt="">
+            <div class="new">
+              NEW
+            </div>
+          </div>
+          <h6 class="pt-3">Heratherm™ General Protocol
+            Microbiological Incubator</h6>
+          <a class="btn btn-primary btn-sm" href="#" role="button">MORE INFO</a>
+        </div>
+        <div class="col-lg-4 pt-5 text-center mt-3">
+          <div class="position-relative w-75 mx-auto">
+            <img class="w-100" src="Images\Home\prod1.jpg" alt="">
+            <div class="new">
+              NEW
+            </div>
+          </div>
+          <h6 class="pt-3">Heratherm™ General Protocol
+            Microbiological Incubator</h6>
+          <a class="btn btn-primary btn-sm" href="#" role="button">MORE INFO</a>
+        </div>
+        <div class="col-lg-4 pt-5 text-center mt-3">
+          <div class="position-relative w-75 mx-auto">
+            <img class="w-100" src="Images\Home\prod4.jpg" alt="">
+            <div class="new">
+              NEW
+            </div>
+          </div>
+          <h6 class="pt-3">Heratherm™ General Protocol
+            Microbiological Incubator</h6>
+          <a class="btn btn-primary btn-sm" href="#" role="button">MORE INFO</a>
+        </div>
+        <div class="col-lg-4 pt-5 text-center mt-3">
+          <div class="position-relative w-75 mx-auto">
+            <img class="w-100" src="Images\Home\prod1.jpg" alt="">
+            <div class="new">
+              NEW
+            </div>
+          </div>
+          <h6 class="pt-3">Heratherm™ General Protocol
+            Microbiological Incubator</h6>
+          <a class="btn btn-primary btn-sm" href="#" role="button">MORE INFO</a>
         </div>
       </div>
     </div>
-  </div>
 
-  <nav class="navbar navbar-expand-lg navbar-light">
-    <div class="container">
-      <a class="navbar-brand" href="#"><img src="Images\logo.png" alt="" class="img-rounded center-block"></a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item active">
-            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Service</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Equipment</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Consumables</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Contact</a>
-          </li>
-          <li class="nav-item">
-            <a class="" href="#"><img class="icon-img" src="Images\search-icon.png" alt="" class="img-rounded center-block"></a>
-          </li>
-        </ul>
+    <div class="py-5 mt-3">
+      <h2 class="text-center text-blue">SERVICE AND <span class="yellow-border-h2">SUPPORT</span></h2>
+      <div class="row">
+        <div class="col-lg-4 pt-5 text-center mt-3">
+          <div class="position-relative w-75 mx-auto">
+            <img class="w-100" src="Images\Home\prod1.jpg" alt="">
+            <div class="new">
+              NEW
+            </div>
+          </div>
+          <h6 class="pt-3">Heratherm™ General Protocol
+            Microbiological Incubator</h6>
+          <a class="btn btn-primary btn-sm" href="#" role="button">MORE INFO</a>
+        </div>
+        <div class="col-lg-4 pt-5 text-center mt-3">
+          <div class="position-relative w-75 mx-auto">
+            <img class="w-100" src="Images\Home\prod1.jpg" alt="">
+            <div class="new">
+              NEW
+            </div>
+          </div>
+          <h6 class="pt-3">Heratherm™ General Protocol
+            Microbiological Incubator</h6>
+          <a class="btn btn-primary btn-sm" href="#" role="button">MORE INFO</a>
+        </div>
+        <div class="col-lg-4 pt-5 text-center mt-3">
+          <div class="position-relative w-75 mx-auto">
+            <img class="w-100" src="Images\Home\prod1.jpg" alt="">
+            <div class="new">
+              NEW
+            </div>
+          </div>
+          <h6 class="pt-3">Heratherm™ General Protocol
+            Microbiological Incubator</h6>
+          <a class="btn btn-primary btn-sm" href="#" role="button">MORE INFO</a>
+        </div>
       </div>
     </div>
-  </nav>
-
-  <div class="py-5 bg-dark">
 
   </div>
 
+  <div class="position-relative mt-5">
+    <img class="d-none d-lg-block w-100" src="Images\Home\main-header-nowhite.jpg" alt="">
+    <img class="d-lg-none d-block w-100" src="Images\Home\main-header-nowhite_mobile.jpg" alt="">
+    <div class="position-absolute white-overlay-banner"></div>
+    <div class="position-absolute overlay-text text-blue text-center">
+      <div class="container">
+        <h2><span class="yellow-border-h2">CONTACT</span> US</h1>
+      </div>
+    </div>
+  </div>
+
+  <div class="container py-5 my-4">
+    <form>
+      <div class="form-row">
+        <div class="form-group col-md-6">
+          <label for="name">Your Name*</label>
+          <input type="text" class="form-control" id="name">
+        </div>
+        <div class="form-group col-md-6">
+          <label for="email">Your Email*</label>
+          <input type="email" class="form-control" id="email">
+        </div>
+      </div>
+      <div class="form-group">
+        <label for="message">Your Message</label>
+        <textarea class="form-control" id="message" rows="4"></textarea>
+      </div>
+      <button type="submit" class="btn btn-primary rounded-0 btn-block font-weight-bold">Contact</button>
+    </form>
+  </div>
+
+  <footer class="mt-5 position-relative">
+    <div class="bg-grey">
+      <div class="container">
+        <div class="row pb-5 justify-content-center align-items-center flex-column flex-lg-row">
+          <div class="col-8 col-sm-6 col-md-4 col-lg-2 pt-5">
+            <img class="w-100" src="Images\white-logo.png" alt="">
+          </div>
+          <div class="grey-border d-none d-lg-flex">
+
+          </div>
+          <div class="w-auto pt-5 text-white contact px-2">
+            <div class="d-flex flex-column justify-content-center">
+              <div class="d-flex align-items-center mb-1 align-self-stretch">
+                <img class="footer-icon" src="Images\tel-icon-top.png" alt="">
+                <div class="d-flex flex-column">
+                  <a href="tel:8006614335">Phone (800)
+                    661-4335</a>
+                  <a href="tel:8006614335">Phone (800)
+                    661-4335</a>
+                </div>
+              </div>
+              <div class="d-flex align-items-center mb-1">
+                <img class=" footer-icon" src="Images\address-icon.png" alt="">
+                <a class="d-inline-block" href="#">155 Hachborn Rd.,Brantford,<br>
+                  Ontario N3S 7W7 Canada</a>
+              </div>
+              <div class="d-flex align-items-center align-self-stretch">
+                <img class="footer-icon" src="Images\mail-icon.png" alt="">
+                <a href="mailto:sales@idealscientific.com">sales@idealscientific.com</a>
+              </div>
+            </div>
+          </div>
+          <div class="grey-border d-none d-lg-flex">
+
+          </div>
+          <div class="col-8 col-lg-2 pt-5">
+            <div class="d-flex align-items-center justify-content-center justify-content-lg-start">
+              <div class="h5 text-white mr-3">
+                Stay up <br> to date!
+              </div>
+              <img class="footer-icon" src="Images\linked-in-icon.png" alt="">
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="bg-dark-grey">
+        <div class="container">
+          <div class="py-4 d-flex flex-column align-items-center">
+            <ul class="nav justify-content-center">
+              <li class="nav-item">
+                <a class="nav-link active" href="#">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Service</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Equipment</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Consumables</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Contact</a>
+              </li>
+            </ul>
+            <div class="grey-hr">
+
+            </div>
+            <div class="text-light-grey font-weight-bold py-2 mb-0 mb-lg-4">
+              Copyright © 2021. Ideal Scientific Inc. All Rights Reserved.
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <a class="btn-request" href="#">REQUEST A QUOTE</a>
+
+  </footer>
 
   <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
