--- a/index.html
+++ b/index.html
@@ -18,13 +18,12 @@
       <div class="container text-white pb-2">
         <div class="row align-items-center">
           <div class="col">
-            <div class="pt-2 d-flex justify-content-center justify-content-lg-start">
+            <div class="pt-2">
               See how we’re handling our COVID-19 Response.
             </div>
           </div>
-          <div class="col-lg-4 text-right">
-            <a href="tel:8006614335" class="d-flex align-items-center text-white pt-2 justify-content-center justify-content-lg-end"><img class="phone icon-img" src="Images\tel-icon-top.png" alt=""><span
-                class="d-none d-lg-flex">Phone&nbsp;</span>(800)
+          <div class="w-auto text-right pr-3">
+            <a href="tel:8006614335" class="d-flex align-items-center text-white pt-2 justify-content-end"><img class="phone icon-img" src="Images\tel-icon-top.png" alt=""><span class="d-none d-lg-flex">Phone&nbsp;</span>(800)
               661-4335</a>
           </div>
         </div>
@@ -34,9 +33,32 @@
     <nav class="navbar navbar-expand-lg navbar-light">
       <div class="container">
         <a class="navbar-brand" href="#"><img src="Images\logo.png" alt="" class="img-rounded center-block"></a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
+        <div class="d-flex justify-content-end align-items-center">
+          <div class="dropdown search pr-3 d-flex d-lg-none">
+            <a class="" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              <img class="icon-img img-rounded center-block" src="Images\search-icon.png" alt="">
+            </a>
+            <div class="dropdown-menu dropdown-menu-right pb-3" aria-labelledby="dropdownMenuButton">
+              <div class="input-group">
+                <div class="input-group-prepend">
+                  <span class="input-group-text" id="basic-addon1"><img class="icon-img img-rounded center-block" src="Images\search-icon.png" alt=""></span>
+                </div>
+                <input type="text" class="form-control" placeholder="" aria-label="Search" aria-describedby="basic-addon1">
+              </div>
+              <div class="pt-3 pl-2">
+                Search Results
+              </div>
+              <a class="dropdown-item" href="#">| Action</a>
+              <a class="dropdown-item" href="#">| Another action</a>
+              <a class="dropdown-item" href="#">| Something else here</a>
+            </div>
+          </div>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <svg id="i-menu" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32" width="40" height="40" fill="none" stroke="currentcolor" stroke-linecap="butt" stroke-linejoin="round" stroke-width="4">
+              <path d="M4 8 L28 8 M4 16 L28 16 M4 24 L28 24" />
+            </svg>
+          </button>
+        </div>
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ml-auto">
@@ -55,20 +77,23 @@
             <li class="nav-item">
               <a class="nav-link" href="#">Contact</a>
             </li>
-            <li class="nav-item dropdown search">
+            <li class="nav-item dropdown search d-none d-lg-flex">
               <a class="" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 <img class="icon-img img-rounded center-block" src="Images\search-icon.png" alt="">
               </a>
-              <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton">
+              <div class="dropdown-menu dropdown-menu-right pb-3" aria-labelledby="dropdownMenuButton">
                 <div class="input-group">
                   <div class="input-group-prepend">
                     <span class="input-group-text" id="basic-addon1"><img class="icon-img img-rounded center-block" src="Images\search-icon.png" alt=""></span>
                   </div>
                   <input type="text" class="form-control" placeholder="" aria-label="Search" aria-describedby="basic-addon1">
                 </div>
-                <a class="dropdown-item" href="#">Action</a>
-                <a class="dropdown-item" href="#">Another action</a>
-                <a class="dropdown-item" href="#">Something else here</a>
+                <div class="pt-3 pl-2">
+                  Search Results
+                </div>
+                <a class="dropdown-item" href="#">| Action</a>
+                <a class="dropdown-item" href="#">| Another action</a>
+                <a class="dropdown-item" href="#">| Something else here</a>
               </div>
             </li>
           </ul>
@@ -93,10 +118,10 @@
   </div>
 
   <div class="container">
-    <div class="py-5 mt-3">
+    <div class="py-4 py-lg-5 mt-3">
       <h2 class="text-center text-blue"><span class="yellow-border-h2">NEW</span> PRODUCTS</h2>
       <div class="row">
-        <div class="col-lg-4 pt-5 text-center mt-3">
+        <div class="col-lg-4 pt-3 pt-lg-5 text-center mt-3">
           <div class="position-relative w-75 mx-auto">
             <img class="w-100" src="Images\Home\prod1.jpg" alt="">
             <div class="new">
@@ -107,7 +132,7 @@
             Microbiological Incubator</h6>
           <a class="btn btn-primary btn-sm" href="#" role="button">MORE INFO</a>
         </div>
-        <div class="col-lg-4 pt-5 text-center mt-3">
+        <div class="col-lg-4 pt-3 pt-lg-5 text-center mt-3">
           <div class="position-relative w-75 mx-auto">
             <img class="w-100" src="Images\Home\prod1.jpg" alt="">
             <div class="new">
@@ -118,7 +143,7 @@
             Microbiological Incubator</h6>
           <a class="btn btn-primary btn-sm" href="#" role="button">MORE INFO</a>
         </div>
-        <div class="col-lg-4 pt-5 text-center mt-3">
+        <div class="col-lg-4 pt-3 pt-lg-5 text-center mt-3">
           <div class="position-relative w-75 mx-auto">
             <img class="w-100" src="Images\Home\prod1.jpg" alt="">
             <div class="new">
@@ -129,7 +154,7 @@
             Microbiological Incubator</h6>
           <a class="btn btn-primary btn-sm" href="#" role="button">MORE INFO</a>
         </div>
-        <div class="col-lg-4 pt-5 text-center mt-3">
+        <div class="col-lg-4 pt-3 pt-lg-5 text-center mt-3">
           <div class="position-relative w-75 mx-auto">
             <img class="w-100" src="Images\Home\prod4.jpg" alt="">
             <div class="new">
@@ -140,7 +165,7 @@
             Microbiological Incubator</h6>
           <a class="btn btn-primary btn-sm" href="#" role="button">MORE INFO</a>
         </div>
-        <div class="col-lg-4 pt-5 text-center mt-3">
+        <div class="col-lg-4 pt-3 pt-lg-5 text-center mt-3">
           <div class="position-relative w-75 mx-auto">
             <img class="w-100" src="Images\Home\prod1.jpg" alt="">
             <div class="new">
@@ -154,10 +179,10 @@
       </div>
     </div>
 
-    <div class="py-5 mt-3">
+    <div class="py-4 pt-lg-5 mt-3">
       <h2 class="text-center text-blue">SERVICE AND <span class="yellow-border-h2">SUPPORT</span></h2>
       <div class="row">
-        <div class="col-lg-4 pt-5 text-center mt-3">
+        <div class="col-lg-4 pt-3 pt-lg-5 text-center mt-3">
           <div class="position-relative w-75 mx-auto">
             <img class="w-100" src="Images\Home\prod1.jpg" alt="">
             <div class="new">
@@ -168,7 +193,7 @@
             Microbiological Incubator</h6>
           <a class="btn btn-primary btn-sm" href="#" role="button">MORE INFO</a>
         </div>
-        <div class="col-lg-4 pt-5 text-center mt-3">
+        <div class="col-lg-4 pt-3 pt-lg-5 text-center mt-3">
           <div class="position-relative w-75 mx-auto">
             <img class="w-100" src="Images\Home\prod1.jpg" alt="">
             <div class="new">
@@ -179,7 +204,7 @@
             Microbiological Incubator</h6>
           <a class="btn btn-primary btn-sm" href="#" role="button">MORE INFO</a>
         </div>
-        <div class="col-lg-4 pt-5 text-center mt-3">
+        <div class="col-lg-4 pt-3 pt-lg-5 text-center mt-3">
           <div class="position-relative w-75 mx-auto">
             <img class="w-100" src="Images\Home\prod1.jpg" alt="">
             <div class="new">
@@ -206,7 +231,7 @@
     </div>
   </div>
 
-  <div class="container py-5 my-4">
+  <div class="container py-5 my-0 my-lg-4">
     <form>
       <div class="form-row">
         <div class="form-group col-md-6">
@@ -226,17 +251,17 @@
     </form>
   </div>
 
-  <footer class="mt-5 position-relative">
+  <footer class="mt-3 mt-lg-5 position-relative">
     <div class="bg-grey">
       <div class="container">
-        <div class="row pb-5 justify-content-center align-items-center flex-column flex-lg-row">
-          <div class="col-8 col-sm-6 col-md-4 col-lg-2 pt-5">
+        <div class="row pb-4 pb-lg-5 justify-content-center align-items-center flex-column flex-lg-row">
+          <div class="col-7 col-sm-5 col-md-4 col-lg-2 pt-5">
             <img class="w-100" src="Images\white-logo.png" alt="">
           </div>
           <div class="grey-border d-none d-lg-flex">
 
           </div>
-          <div class="w-auto pt-5 text-white contact px-2">
+          <div class="w-auto pt-4 pt-lg-5 text-white contact px-2">
             <div class="d-flex flex-column justify-content-center">
               <div class="d-flex align-items-center mb-1 align-self-stretch">
                 <img class="footer-icon" src="Images\tel-icon-top.png" alt="">
@@ -261,7 +286,7 @@
           <div class="grey-border d-none d-lg-flex">
 
           </div>
-          <div class="col-8 col-lg-2 pt-5">
+          <div class="col-8 col-lg-2 pt-4 pt-lg-5">
             <div class="d-flex align-items-center justify-content-center justify-content-lg-start">
               <div class="h5 text-white mr-3">
                 Stay up <br> to date!
@@ -275,7 +300,7 @@
       <div class="bg-dark-grey">
         <div class="container">
           <div class="py-4 d-flex flex-column align-items-center">
-            <ul class="nav justify-content-center">
+            <ul class="nav justify-content-center flex-column flex-md-row">
               <li class="nav-item">
                 <a class="nav-link active" href="#">Home</a>
               </li>
@@ -295,8 +320,8 @@
             <div class="grey-hr">
 
             </div>
-            <div class="text-light-grey font-weight-bold py-2 mb-0 mb-lg-4">
-              Copyright © 2021. Ideal Scientific Inc. All Rights Reserved.
+            <div class="text-light-grey font-weight-bold py-2 mb-0 mb-lg-4 text-center copy">
+              Copyright © 2021. Ideal Scientific Inc.<br class="d-block d-md-none"> All Rights Reserved.
             </div>
           </div>
         </div>
