--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
   <header>
     <div class="bg-light-grey top-header">
-      <div class="container text-white pb-2">
+      <div class="container-md text-white pb-2">
         <div class="row align-items-center">
           <div class="col">
             <div class="pt-2">
@@ -23,18 +23,18 @@
             </div>
           </div>
           <div class="w-auto text-right pr-3">
-            <a href="tel:8006614335" class="d-flex align-items-center text-white pt-2 justify-content-end"><img class="phone icon-img" src="Images\tel-icon-top.png" alt=""><span class="d-none d-lg-flex">Phone&nbsp;</span>(800)
+            <a href="tel:8006614335" class="d-flex align-items-center text-white pt-2 justify-content-end"><img class="phone icon-img" src="Images\tel-icon-top.png" alt=""><span class="d-none d-md-flex">Phone&nbsp;</span>(800)
               661-4335</a>
           </div>
         </div>
       </div>
     </div>
 
-    <nav class="navbar navbar-expand-lg navbar-light">
-      <div class="container">
+    <nav class="navbar navbar-expand-md navbar-light">
+      <div class="container-md">
         <a class="navbar-brand" href="#"><img src="Images\logo.png" alt="" class="img-rounded center-block"></a>
         <div class="d-flex justify-content-end align-items-center">
-          <div class="dropdown search pr-3 d-flex d-lg-none">
+          <div class="dropdown search pr-3 d-flex d-md-none">
             <a class="" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               <img class="icon-img img-rounded center-block" src="Images\search-icon.png" alt="">
             </a>
@@ -77,7 +77,7 @@
             <li class="nav-item">
               <a class="nav-link" href="#">Contact</a>
             </li>
-            <li class="nav-item dropdown search d-none d-lg-flex">
+            <li class="nav-item dropdown search d-none d-md-flex">
               <a class="" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 <img class="icon-img img-rounded center-block" src="Images\search-icon.png" alt="">
               </a>
@@ -102,26 +102,26 @@
     </nav>
   </header>
   <div class="position-relative">
-    <img class="d-none d-lg-block w-100" src="Images\Home\main-header-nowhite.jpg" alt="">
-    <img class="d-lg-none d-block w-100" src="Images\Home\main-header-nowhite_mobile.jpg" alt="">
+    <img class="d-none d-md-block w-100" src="Images\Home\main-header-nowhite.jpg" alt="">
+    <img class="d-md-none d-block w-100" src="Images\Home\main-header-nowhite_mobile.jpg" alt="">
     <div class="position-absolute white-overlay"></div>
     <div class="position-absolute overlay-text text-blue">
-      <div class="container">
+      <div class="container-md">
         <h1><span class="small">Trusted Laboratory Products and Services</span>
           <br>FOR OVER <span class="yellow-border">30 YEARS!</span></h1>
       </div>
     </div>
     <a class="overlay-arrow position-absolute" href="#">
-      <img class="d-none d-lg-block" src="Images\arrow-button.png" alt="">
-      <img class="d-block d-lg-none" src="Images\arrow-button-mobile.png" alt="">
+      <img class="d-none d-md-block" src="Images\arrow-button.png" alt="">
+      <img class="d-block d-md-none" src="Images\arrow-button-mobile.png" alt="">
     </a>
   </div>
 
-  <div class="container">
-    <div class="py-4 py-lg-5 mt-3">
+  <div class="container-md">
+    <div class="py-4 py-md-5 mt-3">
       <h2 class="text-center text-blue"><span class="yellow-border-h2">NEW</span> PRODUCTS</h2>
       <div class="row">
-        <div class="col-lg-4 pt-3 pt-lg-5 text-center mt-3">
+        <div class="col-sm-6 col-md-4 pt-3 pt-md-5 text-center mt-3">
           <div class="position-relative w-75 mx-auto">
             <img class="w-100" src="Images\Home\prod1.jpg" alt="">
             <div class="new">
@@ -132,7 +132,7 @@
             Microbiological Incubator</h6>
           <a class="btn btn-primary btn-sm" href="#" role="button">MORE INFO</a>
         </div>
-        <div class="col-lg-4 pt-3 pt-lg-5 text-center mt-3">
+        <div class="col-sm-6 col-md-4 pt-3 pt-md-5 text-center mt-3">
           <div class="position-relative w-75 mx-auto">
             <img class="w-100" src="Images\Home\prod1.jpg" alt="">
             <div class="new">
@@ -143,7 +143,7 @@
             Microbiological Incubator</h6>
           <a class="btn btn-primary btn-sm" href="#" role="button">MORE INFO</a>
         </div>
-        <div class="col-lg-4 pt-3 pt-lg-5 text-center mt-3">
+        <div class="col-sm-6 col-md-4 pt-3 pt-md-5 text-center mt-3">
           <div class="position-relative w-75 mx-auto">
             <img class="w-100" src="Images\Home\prod1.jpg" alt="">
             <div class="new">
@@ -154,7 +154,7 @@
             Microbiological Incubator</h6>
           <a class="btn btn-primary btn-sm" href="#" role="button">MORE INFO</a>
         </div>
-        <div class="col-lg-4 pt-3 pt-lg-5 text-center mt-3">
+        <div class="col-sm-6 col-md-4 pt-3 pt-md-5 text-center mt-3">
           <div class="position-relative w-75 mx-auto">
             <img class="w-100" src="Images\Home\prod4.jpg" alt="">
             <div class="new">
@@ -165,7 +165,7 @@
             Microbiological Incubator</h6>
           <a class="btn btn-primary btn-sm" href="#" role="button">MORE INFO</a>
         </div>
-        <div class="col-lg-4 pt-3 pt-lg-5 text-center mt-3">
+        <div class="col-sm-6 col-md-4 pt-3 pt-md-5 text-center mt-3">
           <div class="position-relative w-75 mx-auto">
             <img class="w-100" src="Images\Home\prod1.jpg" alt="">
             <div class="new">
@@ -179,10 +179,10 @@
       </div>
     </div>
 
-    <div class="py-4 pt-lg-5 mt-3">
+    <div class="py-4 pt-md-5 mt-3">
       <h2 class="text-center text-blue">SERVICE AND <span class="yellow-border-h2">SUPPORT</span></h2>
       <div class="row">
-        <div class="col-lg-4 pt-3 pt-lg-5 text-center mt-3">
+        <div class="col-sm-6 col-md-4 pt-3 pt-md-5 text-center mt-3">
           <div class="position-relative w-75 mx-auto">
             <img class="w-100" src="Images\Home\prod1.jpg" alt="">
             <div class="new">
@@ -193,7 +193,7 @@
             Microbiological Incubator</h6>
           <a class="btn btn-primary btn-sm" href="#" role="button">MORE INFO</a>
         </div>
-        <div class="col-lg-4 pt-3 pt-lg-5 text-center mt-3">
+        <div class="col-sm-6 col-md-4 pt-3 pt-md-5 text-center mt-3">
           <div class="position-relative w-75 mx-auto">
             <img class="w-100" src="Images\Home\prod1.jpg" alt="">
             <div class="new">
@@ -204,7 +204,7 @@
             Microbiological Incubator</h6>
           <a class="btn btn-primary btn-sm" href="#" role="button">MORE INFO</a>
         </div>
-        <div class="col-lg-4 pt-3 pt-lg-5 text-center mt-3">
+        <div class="col-sm-6 col-md-4 pt-3 pt-md-5 text-center mt-3">
           <div class="position-relative w-75 mx-auto">
             <img class="w-100" src="Images\Home\prod1.jpg" alt="">
             <div class="new">
@@ -221,17 +221,17 @@
   </div>
 
   <div class="position-relative mt-5">
-    <img class="d-none d-lg-block w-100" src="Images\Home\main-header-nowhite.jpg" alt="">
-    <img class="d-lg-none d-block w-100" src="Images\Home\main-header-nowhite_mobile.jpg" alt="">
+    <img class="d-none d-md-block w-100" src="Images\Home\main-header-nowhite.jpg" alt="">
+    <img class="d-md-none d-block w-100" src="Images\Home\main-header-nowhite_mobile.jpg" alt="">
     <div class="position-absolute white-overlay-banner"></div>
     <div class="position-absolute overlay-text text-blue text-center">
-      <div class="container">
+      <div class="container-md">
         <h2><span class="yellow-border-h2">CONTACT</span> US</h1>
       </div>
     </div>
   </div>
 
-  <div class="container py-5 my-0 my-lg-4">
+  <div class="container-md py-5 my-0 my-md-4">
     <form>
       <div class="form-row">
         <div class="form-group col-md-6">
@@ -251,17 +251,17 @@
     </form>
   </div>
 
-  <footer class="mt-3 mt-lg-5 position-relative">
+  <footer class="mt-3 mt-md-5 position-relative">
     <div class="bg-grey">
-      <div class="container">
-        <div class="row pb-4 pb-lg-5 justify-content-center align-items-center flex-column flex-lg-row">
-          <div class="col-7 col-sm-5 col-md-4 col-lg-2 pt-5">
+      <div class="container-md">
+        <div class="row pb-4 pb-md-5 justify-content-center align-items-center flex-column flex-md-row">
+          <div class="col-7 col-sm-5 col-md-3 col-md-2 pt-5">
             <img class="w-100" src="Images\white-logo.png" alt="">
           </div>
-          <div class="grey-border d-none d-lg-flex">
+          <div class="grey-border d-none d-md-flex">
 
           </div>
-          <div class="w-auto pt-4 pt-lg-5 text-white contact px-2">
+          <div class="w-auto pt-4 pt-md-5 text-white contact px-2">
             <div class="d-flex flex-column justify-content-center">
               <div class="d-flex align-items-center mb-1 align-self-stretch">
                 <img class="footer-icon" src="Images\tel-icon-top.png" alt="">
@@ -283,11 +283,11 @@
               </div>
             </div>
           </div>
-          <div class="grey-border d-none d-lg-flex">
+          <div class="grey-border d-none d-md-flex">
 
           </div>
-          <div class="col-8 col-lg-2 pt-4 pt-lg-5">
-            <div class="d-flex align-items-center justify-content-center justify-content-lg-start">
+          <div class="col-8 col-md-3 pt-4 pt-md-5">
+            <div class="d-flex align-items-center justify-content-center justify-content-md-start">
               <div class="h5 text-white mr-3">
                 Stay up <br> to date!
               </div>
@@ -298,7 +298,7 @@
       </div>
 
       <div class="bg-dark-grey">
-        <div class="container">
+        <div class="container-md">
           <div class="py-4 d-flex flex-column align-items-center">
             <ul class="nav justify-content-center flex-column flex-md-row">
               <li class="nav-item">
@@ -320,7 +320,7 @@
             <div class="grey-hr">
 
             </div>
-            <div class="text-light-grey font-weight-bold py-2 mb-0 mb-lg-4 text-center copy">
+            <div class="text-light-grey font-weight-bold py-2 mb-0 mb-md-4 text-center copy">
               Copyright © 2021. Ideal Scientific Inc.<br class="d-block d-md-none"> All Rights Reserved.
             </div>
           </div>
