--- a/equipment-expanded-individual.html
+++ b/equipment-expanded-individual.html
@@ -102,12 +102,12 @@
     </nav>
   </header>
   <div class="position-relative">
-    <img class="d-none d-md-block w-100" src="Images\Consumables\consumables-header-desktop.jpg" alt="">
-    <img class="d-md-none d-block w-100" src="Images\Consumables\consumables-header-mobile.jpg" alt="">
+    <img class="d-none d-md-block w-100" src="Images\Equipment\equipment-header-desktop.jpg" alt="">
+    <img class="d-md-none d-block w-100" src="Images\Equipment\equipment-header-mobile.jpg" alt="">
     <div class="position-absolute white-overlay"></div>
     <div class="position-absolute overlay-text text-blue">
       <div class="container-md">
-        <h1><span class="yellow-border">CONSUMABLES</span></h1>
+        <h1><span class="yellow-border">EQUIPMENT</span></h1>
       </div>
     </div>
   </div>
@@ -149,11 +149,11 @@
             </ul>
           </div>
           <div class="pt-4 d-block d-md-none sidebar">
-            <button type="button" class="btn btn-light vw-100 position-relative" data-toggle="collapse" data-target="#collapseExample" aria-expanded="true" aria-controls="collapseExample">Click to Expand <span class="down-arrow"><svg
-                  aria-hidden="true" height="25" width="25" focusable="false" data-prefix="fas" data-icon="caret-down" class="svg-inline--fa fa-caret-down fa-w-10" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512">
+            <button type="button" class="btn btn-light vw-100 position-relative" data-toggle="collapse" data-target="#collapseExample" aria-expanded="true" aria-controls="collapseExample">Click to Expand <span class="down-arrow"><svg aria-hidden="true" height="25" width="25" focusable="false" data-prefix="fas" data-icon="caret-down"
+                  class="svg-inline--fa fa-caret-down fa-w-10" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512">
                   <path fill="currentColor" d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"></path>
                 </svg></span> </button>
-            <div class="collapse vw-100" id="collapseExample">
+            <div class="collapse vw-100"  id="collapseExample">
               <div class="mt-0 mt-md-5 bg-light-grey1 py-4 text-center">
                 <ul class="nav flex-column sidebar-list">
                   <li class="nav-item">
