--- a/index.html
+++ b/index.html
@@ -107,8 +107,11 @@
     <div class="position-absolute white-overlay"></div>
     <div class="position-absolute overlay-text text-blue">
       <div class="container-md">
-        <h1><span class="small">Trusted Laboratory Products and Services</span>
-          <br>FOR OVER <span class="yellow-border">30 YEARS!</span></h1>
+        <div class="text-blue">
+          <div class="h3 mb-0 font-weight-normal text-blue">Trusted Laboratory Products and Services</div>
+          <h1>FOR OVER <span class="yellow-border">30 YEARS!</span></h1>
+        </div>
+
       </div>
     </div>
     <a class="overlay-arrow position-absolute" href="#">
